Reduce whitespace; fix a couple warnings #153

--- a/react/src/chart1.css
+++ b/react/src/chart1.css
@@ -40,18 +40,19 @@ rect.extent {
 
 body {
     padding: 0;
+    line-height:1.3;
 }
 
 #graphContainer .button-reportrange {
-    
-    margin:0 0.7em 0 0.7em; 
+
+    margin:0 0.7em 0 0.7em;
     padding:0 0.7em 0 0.7em;
 }
 
 #graphContainer .button-timechange {
     min-width:37px;
     float:none;
-    margin:0 0.2em;
+    margin:0.2em 0.2em;
 
 }
 
@@ -62,4 +63,33 @@ body {
 .react-datepicker-wrapper {
     float:left;
     margin: 0 0.2em;
+}
+
+#graphContainer input[type=checkbox] {
+    margin:0.5em 0;
+}
+
+.graph-temp {
+    display: flex;
+    align-items: flex-start;
+
+}
+
+.box-range{
+    flex-basis:auto;
+    margin:0px;
+}
+
+.box-range input[type=text], #graphContainer .box-range .button-timechange {
+    margin-bottom:0.3em;
+    margin-top:0.3em;
+}
+
+#dateRangeColumn {
+    padding: 0 0.7em 0 0.7em
+}
+
+.react-datepicker__time-container .react-datepicker__time .react-datepicker__time-box ul.react-datepicker__time-list {
+    padding-left: 0;
+    padding-right: 0;
 }
